<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/layout_purple_zone"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_title_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView_back_arrow"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="358dp"
            android:layout_marginBottom="8dp"
            android:onClick="openMainWindowActivity"
            app:srcCompat="@drawable/outline_arrow_back_24" />

        <TextView
            android:id="@+id/textView_BackupAndRestore"
            android:layout_width="243dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="93dp"
            android:layout_marginBottom="8dp"
            android:text="@string/STRING_BACKUP_AND_RESTORE_TITLE"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <Button
        android:id="@+id/button_exportToFile"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_below="@id/layout_purple_zone"
        android:layout_marginTop="31dp"
        android:backgroundTint="@color/white"
        android:onClick="exportToFile"
        android:text="@string/STRING_EXPORT_TO_FILE"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:icon="@drawable/outline_folder_24"
        app:iconTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_purple_zone" />


    <Button
        android:id="@+id/button_restoreFromFile"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_below="@id/layout_purple_zone"
        android:layout_marginTop="13dp"
        android:backgroundTint="@color/white"
        android:onClick="restoreFromFile"
        android:text="@string/STRING_RESTORE_FROM_FILE"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:icon="@drawable/outline_file_download_24"
        app:iconTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_exportToFile" />



</androidx.constraintlayout.widget.ConstraintLayout>